<resources>
    <string name="app_name">LocationFinder</string>
    <string name="positive_dialog_button_text">확인</string>
    <string name="negative_dialog_button_text">취소</string>

    <!-- navigation -->
    <string name="bottom_nav_menu1">내 위치</string>
    <string name="bottom_nav_menu2">저장목록</string>
    <string name="bottom_nav_menu3">임시메뉴</string>
    <string name="bottom_nav_menu4">환경설정</string>

    <!-- setting -->
    <string name="open_source_license_title">오픈소스 라이선스</string>
    <string name="delete_saved_list_title">저장목록 비우기</string>
    <string name="ask_remove_saved_list">모든 저장목록을 삭제하시겠습니까?</string>
    <string name="inform_removed_saved_list">저장목록을 삭제하였습니다.</string>
    <string name="inform_the_permission_required">서비스 이용을 위해 권한이 필요합니다</string>
    <string name="inform_no_saved_list">목록을 추가해주세요!</string>

    <!-- location -->
    <string name="inform_no_saved_list_background_text">저장된 목록이 없어요.\n위시리스트를 추가해보세요!</string>
    <string name="random_button_text">랜덤선택</string>

    <!-- search -->
    <string name="search_query_hint">검색어를 입력하세요</string>

    <!-- map -->
    <string name="search_button_text">검색하기</string>

    <!-- item -->
    <string name="category_text">카테고리</string>
    <string name="location_name_text">장소이름</string>
    <string name="location_address_text">주소</string>
    <string name="tool_title_text">아이템 이름</string>
    <string name="tool_content_text">아이템 상세내용</string>
    <string name="distance_format" formatted="false">%sm</string>

    <string name="retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>